# OpenAI-GPT-Chatbot-for-Telegram

./: assistant.json  assistant.py  config.py  core_functions.py  functions.py  main.py  pyproject.toml  sample_properties.json
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.2.1-py3-none-any/pip-23.2.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-68.0.0-py3-none-any/setuptools-68.0.0.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.41.0-py3-none-any/wheel-0.41.0.dist-info/: RECORD
resources/: company_details.txt
tools/: fetch_news_summary.py  signup_newsletter.py  unsubscribe_newsletter.py
